examples/bad/syntax_error.c
int main() {
	itn a;
	return a;
}